fix: hidden section grid gallery

--- a/index.html
+++ b/index.html
@@ -586,9 +586,9 @@
     <!-- End of Litle Training -->
 
     <!-- Grid Gallery -->
-    <h1>Grid Gallery</h1>
+    <!-- <h1>Grid Gallery</h1> -->
 
-    <div class="mt-20 p-2 grid grid-cols-2 gap-2 md:grid-cols-4 md:gap-4">
+    <!-- <div class="mt-20 p-2 grid grid-cols-2 gap-2 md:grid-cols-4 md:gap-4">
       <h2
         class="text-xl font-semibold text-slate-700 md:col-start-4 md:row-start-2 flex"
       >
@@ -630,7 +630,7 @@
       <div class="group grid-card md:col-start-3">
         <div class="grid-card-img bg-[url('/img/grid/10.jpeg')]"></div>
       </div>
-    </div>
+    </div> -->
     <!-- End of Grid Gallery -->
 
     <hr class="my-20" />
