fix: fixing style copyright section

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       };
     </script>
   </head>
-  <body class="pb-20 dark:bg-slate-800">
+  <body class="pb-10 dark:bg-slate-800">
     <h1
       class="text-4xl font-bold text-center mt-10 mb-20 bg-gradient-to-r from-sky-300 to-purple-500 text-transparent bg-clip-text via-green-400 sm:text-5xl md:text-6xl"
     >
@@ -633,9 +633,11 @@
     </div> -->
     <!-- End of Grid Gallery -->
 
-    <hr class="my-20" />
+    <hr class="my-10" />
 
-    <h1>&copy SAP 2024.</h1>
+    <h1 class="text-center font-bold text-slate-700 text-xl">
+      &copy SAP 2024.
+    </h1>
 
     <script>
       const tombol = document.getElementById("tombol");
