--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       rel="stylesheet"
     />
 
-    <title>Belajar Tailwind</title>
+    <title>Learning Tailwind</title>
     <!-- <style type="text/tailwindcss">
       #toggle:checked ~ label div.toggle-circle {
         @apply translate-x-3;
@@ -133,7 +133,7 @@
       >
         Click Me!
       </button>
-      <p id="text" class="my-3"></p>
+      <p id="text" class="my-3 font-semibold dark:text-white"></p>
     </section>
     <!-- End of Article -->
 
@@ -391,7 +391,9 @@
       class="my-20 max-w-xs lg:max-w-full lg:p-12 mx-auto sm:max-w-sm md:max-w-md lg:flex lg:gap-x-10"
     >
       <div class="lg:flex-1">
-        <h1 class="text-slate-700 md:text-5xl lg:text-start">
+        <h1
+          class="text-slate-700 text-4xl font-bold dark:text-white md:text-5xl lg:text-start"
+        >
           Sandi <span class="text-blue-500">Arba</span> Putra
         </h1>
         <img
@@ -635,7 +637,7 @@
 
     <hr class="my-10" />
 
-    <h1 class="text-center font-bold text-slate-700 text-xl">
+    <h1 class="text-center font-bold text-slate-700 text-xl dark:text-white">
       &copy SAP 2024.
     </h1>
 
